# shell-llm

./: README.md  prompts.yaml  pyproject.toml  shellm.py
