[project]
name = "shellm"
version = "0.1.0"
description = "Natural language to shell command CLI tool"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
]
dependencies = ["requests", "platformdirs", "pyyaml"]

[project.scripts]
shellm = "shellm:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"